--- a/index.html
+++ b/index.html
@@ -1,1 +1,148 @@
-Hello world!
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>YOUR NAME — Resume</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root{--accent:#0b74de;--bg:#f7f9fb;--card:#ffffff;--muted:#6b7280}
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,Helvetica,Arial,sans-serif;background:var(--bg);color:#111}
+    .container{max-width:900px;margin:40px auto;padding:28px}
+    .card{background:var(--card);border-radius:12px;box-shadow:0 6px 20px rgba(17,24,39,0.06);padding:28px}
+    header{display:flex;gap:18px;align-items:center}
+    .avatar{width:96px;height:96px;border-radius:14px;background:linear-gradient(135deg,var(--accent),#4ea8ff);display:flex;align-items:center;justify-content:center;color:#fff;font-weight:700;font-size:28px}
+    h1{margin:0;font-size:24px}
+    .title{color:var(--muted);margin-top:6px}
+    .contact{margin-left:auto;text-align:right;font-size:14px;color:var(--muted)}
+    .section{margin-top:22px}
+    .section h2{margin:0 0 12px 0;font-size:16px}
+    .summary{font-size:15px;color:#333;line-height:1.5}
+    .experience-item{padding:14px;border-radius:8px;margin-bottom:12px;background:linear-gradient(180deg,#ffffff,#fbfdff)}
+    .muted{color:var(--muted)}
+    ul.skills{display:flex;flex-wrap:wrap;gap:8px;padding:0;margin:0;list-style:none}
+    ul.skills li{background:#f1f5f9;padding:8px 10px;border-radius:999px;font-size:13px}
+    .two-col{display:grid;grid-template-columns:1fr 320px;gap:20px}
+    @media (max-width:820px){.two-col{grid-template-columns:1fr}.contact{text-align:left;margin-left:0}}
+    footer{margin-top:18px;font-size:13px;color:var(--muted);text-align:center}
+    .label{font-weight:600;color:#0f172a}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="card">
+      <header>
+        <div class="avatar">NY</div>
+        <div>
+          <h1 id="name">YOUR NAME</h1>
+          <div class="title" id="headline">Product Designer • Frontend Engineer</div>
+        </div>
+        <div class="contact">
+          <div id="location">City, Country</div>
+          <div id="email">you@example.com</div>
+          <div id="website">your-website.com</div>
+        </div>
+      </header>
+
+      <div class="two-col">
+        <main>
+          <section class="section">
+            <h2>Summary</h2>
+            <p class="summary" id="summary">Experienced frontend engineer focused on building accessible, performant React applications. I enjoy turning product goals into delightful experiences and shipping quality code.</p>
+          </section>
+
+          <section class="section">
+            <h2>Experience</h2>
+
+            <!-- Repeat experience-item for each job -->
+            <div class="experience-item">
+              <div style="display:flex;justify-content:space-between;align-items:baseline">
+                <div>
+                  <div class="label">Senior Frontend Engineer</div>
+                  <div class="muted">Acme Corp — <small>Jan 2022 — Present</small></div>
+                </div>
+                <div class="muted">Remote</div>
+              </div>
+              <p class="muted" style="margin-top:8px">Worked on a React app used by 100k+ monthly users. Key contributions:</p>
+              <ul>
+                <li>Led migration from class components to hooks and TypeScript.</li>
+                <li>Improved performance and reduced bundle size by 25%.</li>
+                <li>Designed and shipped a component library used across multiple teams.</li>
+              </ul>
+            </div>
+
+            <div class="experience-item">
+              <div style="display:flex;justify-content:space-between;align-items:baseline">
+                <div>
+                  <div class="label">Frontend Engineer</div>
+                  <div class="muted">Beta Studios — <small>Aug 2019 — Dec 2021</small></div>
+                </div>
+                <div class="muted">San Francisco, CA</div>
+              </div>
+              <p class="muted" style="margin-top:8px">Built features for an e-commerce platform:</p>
+              <ul>
+                <li>Implemented checkout UI and A/B testing experiments.</li>
+                <li>Automated visual regression tests to reduce UI bugs.</li>
+              </ul>
+            </div>
+
+          </section>
+
+          <section class="section">
+            <h2>Education</h2>
+            <div class="experience-item">
+              <div>
+                <div class="label">B.S. in Computer Science</div>
+                <div class="muted">University of Somewhere — 2016 — 2020</div>
+              </div>
+            </div>
+          </section>
+
+          <section class="section">
+            <h2>Projects</h2>
+            <div class="experience-item">
+              <div class="label">Open Source Component Library</div>
+              <div class="muted"><small>Github: yourusername/ui-kit</small></div>
+              <p style="margin-top:8px">Small, accessible React component library used by internal apps and external contributors.</p>
+            </div>
+          </section>
+        </main>
+
+        <aside>
+          <section class="section">
+            <h2>Skills</h2>
+            <ul class="skills">
+              <li>JavaScript</li>
+              <li>React</li>
+              <li>TypeScript</li>
+              <li>HTML & CSS</li>
+              <li>Accessibility</li>
+              <li>Testing</li>
+            </ul>
+          </section>
+
+          <section class="section">
+            <h2>Contact & Links</h2>
+            <p class="muted">Replace these with your real links.</p>
+            <p><strong>GitHub:</strong> <span id="gh">github.com/yourusername</span></p>
+            <p><strong>LinkedIn:</strong> <span id="li">linkedin.com/in/yourname</span></p>
+          </section>
+
+          <section class="section">
+            <h2>Extras</h2>
+            <p class="muted">Languages: English (native), Spanish (conversational)</p>
+            <p class="muted">Availability: Open to new roles</p>
+          </section>
+        </aside>
+      </div>
+
+      <footer>
+        Tip: edit the top of this file to replace placeholders (name, email, summary, and experience items). Save as <code>index.html</code> and push to your GitHub repo to host.
+      </footer>
+    </div>
+  </div>
+</body>
+</html>
